Estructura cliente y nav bar

--- a/cliente/src/app/app.component.html
+++ b/cliente/src/app/app.component.html
@@ -1,6 +1,25 @@
-<html>
+<!-- Luego lo sustituiremos por un componente -->
+
+<header id="main-header">
+		
+	<a id="logo-header" href="#">
+		<span class="site-name">TwoHandAPP</span>
+	</a> 
+
+	<nav>
+		<ul>
+			<li><a href="#">Inicio</a></li>
+			<li><a href="#">Shop</a></li>
+			<li><a href="#">Contacto</a></li>
+		</ul>
+	</nav>
+
+</header>
+
+	
 
 
+	
 
 
-</html>
+	
