--- a/cliente/src/app/shared/list-productos/list-productos.component.html
+++ b/cliente/src/app/shared/list-productos/list-productos.component.html
@@ -1,3 +1,29 @@
-<div>Todo OK, falta crear html y css, y pintar</div>
+
+<div id="titulo"> 
+    <h1 style="text-align: center;" >Estos son nuestros productos</h1>
+</div>
 
 
+
+<div *ngIf="listProductos.length > 0">
+
+    <div *ngFor="let producto of listProductos" class="container">
+        <div class="item">
+       
+          <img src="{{ 'assets/images/' + producto.imagen + '.jpg'}}" alt="" class="item-img">
+          
+          <div class="item-text">
+            <h3>{{ producto.nombre }}</h3>
+            <p>{{ producto.descripcion }}</p>
+            <p>{{ producto.precio }} $</p>
+          </div>
+    
+        </div>
+        
+       
+    </div>
+
+</div>
+
+
+  <h3 *ngIf="listProductos.length == 0">Lo sentimos, pero no tenemos ningun dispositivo disponible</h3>
