--- a/cliente/src/app/shared/list-productos/list-productos.component.html
+++ b/cliente/src/app/shared/list-productos/list-productos.component.html
@@ -8,19 +8,21 @@
 <div *ngIf="listProductos.length > 0">
 
     <div *ngFor="let producto of listProductos" class="container">
-        <div class="item">
-       
-          <img src="{{ 'assets/images/' + producto.imagen + '.jpg'}}" alt="" class="item-img">
-          
-          <div class="item-text">
-            <h3>{{ producto.nombre }}</h3>
-            <p>{{ producto.descripcion }}</p>
-            <p>{{ producto.precio }} $</p>
-          </div>
-    
-        </div>
+
+      <a [routerLink]="['/details', producto.slug]" class="preview-link">
+          <div class="item">
         
-       
+            <img src="{{ 'assets/images/' + producto.imagen + '.jpg'}}" alt="" class="item-img">
+            
+            <div class="item-text">
+              <h3>{{ producto.nombre }}</h3>
+              <p>{{ producto.descripcion }}</p>
+              <p>{{ producto.precio }} $</p>
+            </div>
+      
+          </div>
+        
+       </a>
     </div>
 
 </div>
