--- a/cliente/src/app/details/details.component.html
+++ b/cliente/src/app/details/details.component.html
@@ -8,13 +8,13 @@
           <img src="{{ 'assets/images/' + detail.imagen + '.jpg'}}" alt="" class="item-img">
           
           <div class="item-text">
-            <h3>{{detail.nombre}}</h3>
-            <p>{{ detail.marca }}</p>
-            <p>{{ detail.modelo }}</p>
-            <p>{{ detail.estado }}</p>
-            <p>{{ detail.descripcion }}</p>
-            <p>{{ detail.precio }} $</p>
-            <p>{{ detail.ubicacion }}</p>
+            <h3>{{detail.nombre}}</h3><br>
+            <p>Marca :  {{ detail.marca }}</p>
+            <p>Modelo: {{ detail.modelo }}</p>
+            <p>Estado :{{ detail.estado }}</p>
+            <p>Descripcion : {{ detail.descripcion }}</p>
+            <p>Precio : {{ detail.precio }} $</p>
+            <p>Ubicacion vendedor: {{ detail.ubicacion }}</p>
           </div>
         </a>
         </div>
