--- a/cliente/src/app/shared/categories/categories.component.html
+++ b/cliente/src/app/shared/categories/categories.component.html
@@ -5,7 +5,7 @@
 
     <div *ngFor="let categoria of listCategorias" class="container">
 
-        <a [routerLink]="['/shop', categoria.slug]" class="preview-link">
+        <a [routerLink]="['/shop', categoria.nombre_catego]" class="preview-link">
 
             <div class="item">
 
