--- a/cliente/src/app/shared/categories-item/categories-item.component.html
+++ b/cliente/src/app/shared/categories-item/categories-item.component.html
@@ -1,4 +1,5 @@
 
+<div >
 <a [routerLink]="['/shop', categoria.nombre_catego]" class="preview-link">
 
     <div class="item">
@@ -12,3 +13,5 @@
 
     </div>
 </a>
+
+</div>
