Cambios varios, crear search

--- a/cliente/src/app/shared/layout/header.component.css
+++ b/cliente/src/app/shared/layout/header.component.css
@@ -59,3 +59,7 @@
                         nav ul li a:hover {
                             background: #0b76a6;
                         }
+
+                        .search{
+                            text-align: center;
+                        }
