--- a/cliente/src/app/shared/layout/header.component.html
+++ b/cliente/src/app/shared/layout/header.component.html
@@ -4,6 +4,10 @@
 		<span class="site-name">TwoHandAPP</span>
 	</a> 
 
+	<input type="search" name="busquedamusica" placeholder="Search products..." style="text-align: center;">
+		<input routerLink="/shop" type="submit" value="Buscar">
+	
+
 	<nav>
 		<ul>
 			<li><a  routerLink="/home">Inicio</a></li>
