Search basico funcionando, en home y shop

--- a/cliente/src/app/shared/search/search.component.html
+++ b/cliente/src/app/shared/search/search.component.html
@@ -1,1 +1,7 @@
-<p>search works!</p>
+<div class="search">
+    
+    <input type="search" name="search" placeholder="Search products..." (keyup)="search($event)">
+    <input type="submit" value="Buscar" (click)="search_prod($event)"> 
+
+</div>
+
