Login / register funcionando en angular

--- a/cliente/src/app/shared/layout/header.component.html
+++ b/cliente/src/app/shared/layout/header.component.html
@@ -9,7 +9,7 @@
 		<ul>
 			<li><a  routerLink="/home">Inicio</a></li>
 			<li><a  routerLink="/shop">Shop</a></li>
-			<li><a href="#">Contacto</a></li>
+			<li><a routerLink="/login" routerLinkActive="active">Iniciar Sesión</a></li>
 		</ul>
 	</nav>
 
