--- a/cliente/src/app/shared/list-productos/list-productos.component.html
+++ b/cliente/src/app/shared/list-productos/list-productos.component.html
@@ -3,7 +3,9 @@
     <div id="titulo"> 
         <h1 style="text-align: center;" >Estos son nuestros productos</h1>
     </div>
-   
+
+    <app-filter-productos (filterEvent)="getFilteredProducts($event)"></app-filter-productos>
+
     <div id="prods">
         <div *ngIf="listProductos.length > 0">
 
@@ -20,6 +22,6 @@
     </div>    
 
       <h3 *ngIf="listProductos.length == 0">Lo sentimos, pero no tenemos ningun dispositivo disponible</h3>
-    <!--  -->
+
 </div>
 <hr>
