--- a/cliente/src/app/profile/profile.component.html
+++ b/cliente/src/app/profile/profile.component.html
@@ -1,1 +1,128 @@
-<p>profile works!</p>
+<div id="user-profile-2" class="user-profile">
+    <div class="tabbable">
+        <ul class="nav nav-tabs padding-18">
+            <li class="active">
+                <a data-toggle="tab" [routerLink]="['/profile', profile.username]">
+                    <i class="green ace-icon fa fa-user bigger-120"></i>
+                    Profile
+                </a>
+            </li>
+
+            <li>
+                <a data-toggle="tab"    
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }" 
+                [routerLink]="['/profile', profile.username, 'favorites']">
+                    <i class="orange ace-icon fa fa-rss bigger-120"></i>
+                   Favoritos
+                </a>
+            </li>
+
+
+            <li>
+                <a data-toggle="tab" href="#pictures">
+                    <i class="pink ace-icon fa fa-picture-o bigger-120"></i>
+                    Articulos
+                </a>
+            </li>
+        </ul>
+
+        <div class="tab-content no-border padding-24">
+            <div id="home" class="tab-pane in active">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-3 center">
+                        <span class="profile-picture">
+                            <img class="editable img-responsive" alt=" Avatar" id="avatar2" src="https://static.productionready.io/images/smiley-cyrus.jpg">
+                        </span>
+
+                        <div class="space space-4"></div>
+
+                        <a href="#" class="btn btn-sm btn-block btn-success">
+                            <i class="ace-icon fa fa-plus-circle bigger-120"></i>
+                            <span class="bigger-110">Seguir</span>
+                        </a>
+
+                        <a href="#" class="btn btn-sm btn-block btn-primary">
+                            <i class="ace-icon fa fa-envelope-o bigger-110"></i>
+                            <span class="bigger-110">Dejar de seguir</span>
+                        </a>
+                    </div><!-- /.col -->
+
+                    <div class="col-xs-12 col-sm-9">
+                        <h4 class="blue">
+                            <span class="middle">{{ profile.username }}</span>
+                        </h4>
+
+                        <div class="profile-user-info">
+                            <div class="profile-info-row">
+                                <div class="profile-info-name"> Username </div>
+
+                                <div class="profile-info-value">
+                                    <span>{{ profile.username }}</span>
+                                </div>
+                            </div>
+
+                            <div class="profile-info-row">
+                                <div class="profile-info-name"> Location </div>
+
+                                <div class="profile-info-value">
+                                    <i class="fa fa-map-marker light-orange bigger-110"></i>
+                                    <span>Bocairent</span>
+                                    <span>Valencia</span>
+                                </div>
+                            </div>
+
+                            <div class="profile-info-row">
+                                <div class="profile-info-name"> Age </div>
+
+                                <div class="profile-info-value">
+                                    <span>21</span>
+                                </div>
+                            </div>
+
+                            <div class="profile-info-row">
+                                <div class="profile-info-name"> Joined </div>
+
+                                <div class="profile-info-value">
+                                    <span>2010/06/20</span>
+                                </div>
+                            </div>
+
+                         
+                        </div>
+
+                        <div class="hr hr-8 dotted"></div>
+
+                    
+                    </div><!-- /.col -->
+                </div><!-- /.row -->
+
+                <div class="space-20"></div>
+
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="widget-box transparent">
+                            <div class="widget-header widget-header-small">
+                                <h4 class="widget-title smaller">
+                                    <i class="ace-icon fa fa-check-square-o bigger-110"></i>
+                                    Little About Me
+                                </h4>
+                            </div>
+
+                            <div class="widget-body">
+                                <div class="widget-main">
+                                    <p>
+                                       ...
+                                    </p>
+                                 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+</div>
