--- a/cliente/src/app/shared/buttons/favorite-button.component.html
+++ b/cliente/src/app/shared/buttons/favorite-button.component.html
@@ -1,7 +1,6 @@
-<button class="btn btn-sm"
- [ngClass]="{ 'disabled' : isSubmitting,
-              'btn-outline-primary': !producto.favorited,
-              'btn-primary': producto.favorited }"
- (click)="toggleFavorite()">
-  <i class="ion-heart"></i> <ng-content></ng-content>
-</button>
+<button type="button" class="btn btn-outline-primary"
+[ngClass]="{ 'disabled' : isSubmitting,
+'dislike': !producto.favorited,
+'like': producto.favorited }"
+(click)="toggleFavorite()"
+>&hearts;Like</button>
