--- a/cliente/src/app/shared/layout/header.component.html
+++ b/cliente/src/app/shared/layout/header.component.html
@@ -20,8 +20,9 @@
 		<ul *appShowAuthed="true" >
 			<li><a  routerLink="/home">Inicio</a></li>
 			<li><a  [routerLink]="['/shop']">Shop</a></li>
-
+			<li><a routerLink="/settings" >Ajustes</a></li>
 			<li><a [routerLink]="['/profile', username]" >Perfil</a></li>
+			<li><a (click)="logout()" style="cursor: pointer;">Log Out</a></li>
 		</ul>
 	</nav>
 
