--- a/cliente/src/app/shared/list-item-productos/list-item-productos.component.html
+++ b/cliente/src/app/shared/list-item-productos/list-item-productos.component.html
@@ -1,4 +1,3 @@
-<!-- <p>list-item-productos works!</p> -->
 
     <div class="item">
   
@@ -11,6 +10,6 @@
         <p>{{ producto.precio }} $</p>
       
       </div>
-      <app-favorite-button [producto]="producto" (toggle)="onToggleFavorite($event)">{{producto.favorites}}</app-favorite-button>
+      <app-favorite-button [producto]="producto" (toggle)="onToggleFavorite($event)"></app-favorite-button><p>{{producto.favoritesCount}}</p>
     </div>
   
