--- a/cliente/src/app/profile/profile-favorites.component.html
+++ b/cliente/src/app/profile/profile-favorites.component.html
@@ -1,4 +1,3 @@
 <!-- <app-article-list [limit]="10" [config]="favoritesConfig">
 </app-article-list> -->
-
-<p>Aqui favoritos usuario</p>
+<app-list-productos [config]="favoritesConfig"></app-list-productos>
