--- a/cliente/src/app/profile/profile.component.html
+++ b/cliente/src/app/profile/profile.component.html
@@ -24,9 +24,9 @@
                     </div><!-- /.col -->
 
                     <div class="col-xs-12 col-sm-9">
-                        <h4 class="blue">
+                        <h1 class="blue">
                             <span class="middle">{{ profile.username }}</span>
-                        </h4>
+                        </h1>
 
                         <div class="profile-user-info">
                             <div class="profile-info-row">
@@ -78,7 +78,7 @@
                    
 
                     <li>
-                        <a data-toggle="tab"href="#pictures"
+                        <a data-toggle="tab"
                         routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }" 
                         [routerLink]="['/profile', profile.username]">
