--- a/cliente/src/app/details/details.component.html
+++ b/cliente/src/app/details/details.component.html
@@ -5,19 +5,57 @@
   
         <div class="item">
             <a>
-          <img src="{{ 'assets/images/' + detail.imagen + '.jpg'}}" alt="" class="item-img">
+          <img src="{{ 'assets/images/' + producto.imagen + '.jpg'}}" alt="" class="item-img">
           
           <div class="item-text">
-            <h3>{{detail.nombre}}</h3><br>
-            <p>Marca :  {{ detail.marca }}</p>
-            <p>Modelo: {{ detail.modelo }}</p>
-            <p>Estado :{{ detail.estado }}</p>
-            <p>Descripcion : {{ detail.descripcion }}</p>
-            <p>Precio : {{ detail.precio }} $</p>
-            <p>Ubicacion vendedor: {{ detail.ubicacion }}</p>
+            <h3>{{producto.nombre}}</h3><br>
+            <p>Marca :  {{ producto.marca }}</p>
+            <p>Modelo: {{ producto.modelo }}</p>
+            <p>Estado :{{ producto.estado }}</p>
+            <p>Descripcion : {{ producto.descripcion }}</p>
+            <p>Precio : {{ producto.precio }} $</p>
+            <p>Ubicacion vendedor: {{ producto.ubicacion }}</p>
           </div>
         </a>
         </div>
+      <div class="row">
+      <div class="col-xs-12 col-md-8 offset-md-2">
+
+        <!-- <div *appShowAuthed="true"> -->
+          <!-- <app-list-errors [errors]="commentFormErrors"></app-list-errors> -->
+          <form class="card comment-form" (ngSubmit)="addComment()">
+            <fieldset [disabled]="isSubmitting">
+              <div class="card-block">
+                <!-- <textarea class="form-control"
+                  placeholder="Write a comment..."
+                  rows="3"
+                  [formControl]="commentControl"
+                ></textarea> -->
+              </div>
+              <!-- <div class="card-footer">
+                <img [src]="currentUser.image || 'https://static.productionready.io/images/smiley-cyrus.jpg'" alt="user image" class="comment-author-img" />
+                <button class="btn btn-sm btn-primary" type="submit">
+                 Post Comment
+                </button>
+              </div> -->
+            </fieldset>
+          </form>
+        <!-- </div> -->
+<!-- 
+        <div *appShowAuthed="false">
+          <a [routerLink]="['/login']">Sign in</a> or <a [routerLink]="['/register']">sign up</a> to add comments on this article.
+        </div> -->
+        <app-details-comment
+          *ngFor="let comment of comments"
+          [comment]="comment"> <!--
+          (deleteComment)="onDeleteComment(comment)"> -->
+          <!-- <app-details-comment> -->
+       
+        </app-details-comment>
+
+      </div>
+    </div>
+        
       
     
   <!-- </div> -->
