--- a/cliente/src/app/shared/layout/header.component.html
+++ b/cliente/src/app/shared/layout/header.component.html
@@ -22,7 +22,11 @@
 			<li><a  [routerLink]="['/shop']">Shop</a></li>
 			<li><a routerLink="/settings" >Ajustes</a></li>
 			<li><a [routerLink]="['/profile', username]" >Perfil</a></li>
+			<li>     
+				<img class="editable img-responsive" alt=" Avatar" style="width: 40px;"id="avatar2" src="https://static.productionready.io/images/smiley-cyrus.jpg">
+			</li>
 			<li><a (click)="logout()" style="cursor: pointer;">Log Out</a></li>
+		
 		</ul>
 	</nav>
 
