--- a/cliente/src/app/profile/profile-favorites.component.html
+++ b/cliente/src/app/profile/profile-favorites.component.html
@@ -1,3 +1,2 @@
-<!-- <app-article-list [limit]="10" [config]="favoritesConfig">
-</app-article-list> -->
+<h1 style="text-align: center;" >Tus productos favoritos</h1>
 <app-list-productos [config]="favoritesConfig"></app-list-productos>
