--- a/cliente/src/app/profile/profile.component.html
+++ b/cliente/src/app/profile/profile.component.html
@@ -7,7 +7,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-3 center">
                         <span class="profile-picture">
-                            <img class="editable img-responsive" alt=" Avatar" id="avatar2" src="https://static.productionready.io/images/smiley-cyrus.jpg">
+                            <img class="editable img-responsive" alt=" Avatar" id="avatar2" src="{{ 'https://robohash.org/' + profile.username + '.png'}}" >
                         </span>
 
                         <div class="space space-4"></div>
@@ -66,13 +66,11 @@
                          
                         </div>
 
-                        <div class="hr hr-8 dotted"></div>
 
                     
                     </div><!-- /.col -->
                 </div><!-- /.row -->
 
-                <div class="space-20"></div>
 
                 <ul class="nav nav-tabs padding-18">
                    
