--- a/cliente/src/app/profile/profile.component.html
+++ b/cliente/src/app/profile/profile.component.html
@@ -42,8 +42,8 @@
 
                                 <div class="profile-info-value">
                                     <i class="fa fa-map-marker light-orange bigger-110"></i>
-                                    <span>Bocairent</span>
-                                    <span>Valencia</span>
+                                    <span>{{profile.location}}</span>
+                                    <span>España</span>
                                 </div>
                             </div>
 
