--- a/cliente/src/app/settings/settings.component.html
+++ b/cliente/src/app/settings/settings.component.html
@@ -8,7 +8,7 @@
             <div class="d-flex align-items-start py-3 border-bottom"> <img src="{{ 'https://robohash.org/' + user.username + '.png'}}"class="img" alt="">
                 <div class="pl-sm-4 pl-2" id="img-section"> 
                     <b>Profile Photo</b>
-                    <p>Hola {{user.username}}! Dime, que dato quieres cambiar?</p>
+                    <p style="font-size: larger;">Hola, <strong>{{user.username}}!</strong>  Dime, que dato quieres cambiar?</p>
                 </div>
             </div>
 
