--- a/cliente/src/app/details/details.component.css
+++ b/cliente/src/app/details/details.component.css
@@ -1,87 +1,108 @@
-*{
-    padding: 0;
-    margin: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  
-  body{
-    background-color: #eee;
-    font-family: 'Open Sans', sans-serif;
-  }
-  
-  
-  .container{
-      margin-top: 100px;
-      float:left;
-  }
-  
-  #titulo{
-      margin-top: 50px;
-      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  }
-  
-  
-  .item{
-    background-color: #fff;
-    cursor: pointer;
-    box-shadow: 0 0 5px 0 rgba(0,0,0,.095);
-    
-    transition: all 300ms;
-    
-    position: relative;
-  }
-  
-  
-  .item::after {
-    content: "";
-    background-color: rgba(179, 229, 252, .1);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top:0;
-    left: 0;
-    transform: scale(0);
-    transition: all 300ms;
-    opacity: 0;
-  }
-  
-  .item:hover:after{
-    opacity: 1;
-    transform: scale(1);
-  }
-  
+/* Basic Styling */
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+}
 
-  
-  .item-text{
-    padding: 1em;
-  }
-  
-  
-  .item-img{
-    max-width: 100%;
-    display: block;
-  }
-  
-  
-  @media screen and (min-width: 590px) {
-    
-    .container{
-      grid-template-columns: repeat(2, 1fr);
-    }
-    
-  }
-  
-  
-  
-  @media screen and (min-width: 960px) {
-    
-    .container{
-      grid-template-columns: repeat(3, 1fr);
-    }
-    
-  }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 15px;
+  display: flex;
+}
+
+/* Columns */
+.left-column {
+  width: 65%;
+  position: relative;
+}
+
+.right-column {
+  width: 35%;
+  margin-top: 60px;
+}
 
 
-  
+/* Left Column */
+.left-column img {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.left-column img.active {
+  opacity: 1;
+}
+
+
+/* Right Column */
+
+/* Product Description */
+.product-description {
+  border-bottom: 1px solid #E1E8EE;
+  margin-bottom: 20px;
+}
+.product-description span {
+  font-size: 12px;
+  color: #358ED7;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.product-description h1 {
+  font-weight: 300;
+  font-size: 52px;
+  color: #43484D;
+  letter-spacing: -2px;
+}
+.product-description p {
+  font-size: 16px;
+  font-weight: 300;
+  color: #86939E;
+  line-height: 24px;
+}
+
+/* Product Configuration */
+.product-color span,
+.cable-config span {
+  font-size: 14px;
+  font-weight: 400;
+  color: #86939E;
+  margin-bottom: 20px;
+  display: inline-block;
+}
+
+
+
+
+/* Product Price */
+.product-price {
+  display: flex;
+  align-items: center;
+}
+
+.product-price span {
+  font-size: 26px;
+  font-weight: 300;
+  color: #43474D;
+  margin-right: 20px;
+}
+
+.cart-btn {
+  display: inline-block;
+  background-color: #7DC855;
+  border-radius: 6px;
+  font-size: 16px;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 12px 30px;
+  transition: all .5s;
+}
+.cart-btn:hover {
+  background-color: #64af3d;
+}
