Update comments Add, Delete.
Añadir, borrar y mostrar los comentarios de los usuarios.

--- a/cliente/src/app/details/details-comment.component.html
+++ b/cliente/src/app/details/details-comment.component.html
@@ -16,7 +16,7 @@
         {{ comment.createdAt | date: 'longDate' }}
       </span>
       <span class="mod-options" [hidden]="!canModify">
-        <i class="ion-trash-a" (click)="deleteClicked()"></i>
+        <button class="fa fa-trash" (click)="deleteClicked()">Eliminar</button>
       </span>
     </div>
   </div>
