--- a/cliente/src/app/profile/profile.component.html
+++ b/cliente/src/app/profile/profile.component.html
@@ -12,15 +12,8 @@
 
                         <div class="space space-4"></div>
 
-                        <a href="#" class="btn btn-sm btn-block btn-success">
-                            <i class="ace-icon fa fa-plus-circle bigger-120"></i>
-                            <span class="bigger-110">Seguir</span>
-                        </a>
+                        <app-follow></app-follow>
 
-                        <a href="#" class="btn btn-sm btn-block btn-primary">
-                            <i class="ace-icon fa fa-envelope-o bigger-110"></i>
-                            <span class="bigger-110">Dejar de seguir</span>
-                        </a>
                     </div><!-- /.col -->
 
                     <div class="col-xs-12 col-sm-9">
@@ -63,6 +56,13 @@
                                 </div>
                             </div>
 
+                            <div class="profile-info-row">
+                                <div class="profile-info-name"> Rating </div>
+
+                                <div class="profile-info-value">
+                                    <app-rating></app-rating>
+                                </div>
+                            </div>
                          
                         </div>
 
