--- a/cliente/src/app/profile/profile-articles.component.html
+++ b/cliente/src/app/profile/profile-articles.component.html
@@ -1,2 +1,2 @@
-<h1 style="text-align: center;" >Tus productos en venta</h1>
+<h1 style="text-align: center;" >Productos en venta</h1>
  <app-list-productos [config]="articlesConfig"> <h1 style="text-align: center;" >Tus productos favoritos</h1></app-list-productos>
