--- a/cliente/src/app/profile/profile-favorites.component.html
+++ b/cliente/src/app/profile/profile-favorites.component.html
@@ -1,3 +1,3 @@
-<h1 style="text-align: center;" >Tus productos favoritos</h1>
+<h1 style="text-align: center;" >Productos favoritos</h1>
 
 <app-list-productos [config]="favoritesConfig"></app-list-productos>
