--- a/cliente/src/app/profile/profile.component.html
+++ b/cliente/src/app/profile/profile.component.html
@@ -5,6 +5,7 @@
         <div class="tab-content no-border padding-24">
             <div id="home" class="tab-pane in active">
                 <div class="row">
+
                     <div class="col-xs-12 col-sm-3 center">
                         <span class="profile-picture">
                             <img class="editable img-responsive" alt=" Avatar" id="avatar2" src="{{ 'https://robohash.org/' + profile.username + '.png'}}" >
@@ -12,8 +13,9 @@
 
                         <div class="space space-4"></div>
 
-                        <app-follow></app-follow>
-
+                        <app-follow [hidden]='isUser' [profile]='profile' (toggle)="onToggleFollowing($event)"></app-follow>
+                     
+    
                     </div><!-- /.col -->
 
                     <div class="col-xs-12 col-sm-9">
@@ -60,10 +62,18 @@
                                 <div class="profile-info-name"> Rating </div>
 
                                 <div class="profile-info-value">
-                                    <app-rating></app-rating>
+                                    <app-rating [profile]="profile" ></app-rating>
                                 </div>
                             </div>
                          
+                            <div class="profile-info-row">
+                                <div class="profile-info-name"> Seguidores </div>
+
+                                <div class="profile-info-value">
+                                            5
+                                </div>
+                            </div>
+
                         </div>
 
 
