--- a/cliente/src/app/shared/buttons/follow.component.html
+++ b/cliente/src/app/shared/buttons/follow.component.html
@@ -1,10 +1,8 @@
-   <a href="#" class="btn btn-sm btn-block btn-success">
+   <a (click)="toggleFollowing()" 
+   [ngClass]="{ 'disabled': isSubmitting,
+   'btn-success': !profile.following,
+   'btn-danger': profile.following }"
+   class="btn btn-sm btn-block ">
      <i class="ace-icon fa fa-plus-circle bigger-120"></i>
-     <span class="bigger-110">Seguir</span>
+     <span class="bigger-110">  {{ profile.following ? 'Dejar de seguir' : 'Seguir' }}</span>
    </a>
-
-  <!--   <a href="#" class="btn btn-sm btn-block btn-primary">
-      <i class="ace-icon fa fa-envelope-o bigger-110"></i>
-      <span class="bigger-110">Dejar de seguir</span>
-    </a>
- -->
