--- a/cliente/src/app/shared/layout/header.component.html
+++ b/cliente/src/app/shared/layout/header.component.html
@@ -18,12 +18,13 @@
 		
 		<!--  logueado -->
 		<ul *appShowAuthed="true" >
-			<li><a  routerLink="/home">Inicio</a></li>
+			<li><a  [routerLink]="['/home']">Inicio</a></li>
 			<li><a  [routerLink]="['/shop']">Shop</a></li>
-			<li><a routerLink="/settings" >Ajustes</a></li>
+			<li><a [routerLink]="['/settings']" >Ajustes</a></li>
+			<li><a routerLink="/pedidos" >Mis pedidos</a></li>
 			<li><a [routerLink]="['/profile', username]" >Perfil</a></li>
 			<li>     
-				<img class="editable img-responsive" alt=" Avatar" style="width: 40px;"id="avatar2" src="https://static.productionready.io/images/smiley-cyrus.jpg">
+				<img class="editable img-responsive" alt=" Avatar" style="width: 40px;"id="avatar2" src="https://www.clipartmax.com/png/middle/296-2969961_no-image-user-profile-icon.png">
 			</li>
 			<li><a (click)="logout()" style="cursor: pointer;">Log Out</a></li>
 		
