--- a/cliente/src/app/profile/profile.component.html
+++ b/cliente/src/app/profile/profile.component.html
@@ -128,7 +128,7 @@
                         <a data-toggle="tab"    
                         routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }" 
-                        [routerLink]="['/profile', profile.username, 'followed']">
+                        [routerLink]="['/profile', profile.username, 'following']">
                             <i class="orange ace-icon fa fa-rss bigger-120"></i>
                            Following
                         </a>
