--- a/cliente/src/app/profile/profile.component.html
+++ b/cliente/src/app/profile/profile.component.html
@@ -66,14 +66,14 @@
                                 </div>
                             </div>
                          
-                            <div class="profile-info-row">
-                                <div class="profile-info-name"> Rating </div>
+                           <div class="profile-info-row">
+                                <div class="profile-info-name"> Rating user: </div>
 
                                 <div class="profile-info-value">
-                                    <app-rating [profile]="profile" ></app-rating>
+                                   {{profile.rating}} ★
                                 </div>
                          
-                            </div>
+                            </div> 
                          
                             <div class="profile-info-row">
                                 <div class="profile-info-name"> Seguidores </div>
