--- a/cliente/src/app/settings/settings.component.html
+++ b/cliente/src/app/settings/settings.component.html
@@ -29,6 +29,13 @@
                 </div>
 
                 <div class="row py-2">
+                    <div class="col-md-6"> 
+                        <label for="email">Ubicación</label> 
+                        <input type="email" class="bg-light form-control" placeholder="Alicante" formControlName="location"> 
+                    </div>
+                </div>
+
+                <div class="row py-2">
 
                     <div class="col-md-6"> <label for="country">Ubicación</label> <select name="country" id="country" class="bg-light">
                             <option value="india" selected>Valencia</option>
