--- a/cliente/src/app/shared/list-productos/list-productos.component.html
+++ b/cliente/src/app/shared/list-productos/list-productos.component.html
@@ -18,7 +18,8 @@
 
         </div>
     </div>
-    <div id="pag">
+    
+    <div id="pag" *ngIf="listProductos.length > 0">
         <pagination-controls (pageChange)= handlePageChange($event)></pagination-controls>
     </div>    
 
